--- a/volumecontrol/volume_control3.yaml
+++ b/volumecontrol/volume_control3.yaml
@@ -5,7 +5,12 @@ blueprint:
   source_url: https://github.com/r3mcos3/blueprints/blob/main/volumecontrol/volume_control3.yaml
   homeassistant:
     min_version: "2024.3.0"
-  description: " Blueprint to automate all your speakers 🔈️"
+  description: >
+    " Blueprint to automate all your speakers 🔈️
+    
+    
+    📦️ Version: 1.0
+    "
 
   input:
     media:
@@ -33,7 +38,8 @@ blueprint:
                 - schedule
     volume_up:
       name: 🔊 Volume Up Level
-      description: The volume goes to this level when the scheduler goes to on
+      description: >
+        The volume goes to this level when the scheduler goes to on
       default: 0.6
       selector:
         number:
@@ -43,7 +49,8 @@ blueprint:
           mode: slider
     volume_down:
       name: 🔈️ Volume Down Level
-      description: The volume goes to this level when the scheduler goes to off
+      description: >
+        The volume goes to this level when the scheduler goes to off
       default: 0.2
       selector:
         number:
