--- a/volumecontrol/volume_control3.yaml
+++ b/volumecontrol/volume_control3.yaml
@@ -71,7 +71,7 @@ blueprint:
     custom_action:
       name: 🎬 Custom Action
       description: >
-        `optional`
+        `Csutom Action` `Optional`
 
 
         This custom action gets executed if scheduler get to 'on' or 'off'
