--- a/Heating Control/heating_control_blueprint.yaml
+++ b/Heating Control/heating_control_blueprint.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: "🔥 Advanced Heating Control"
   description: >-
-    Version: 2.8
+    Version: 2.9
     A smart thermostat control that considers indoor/outdoor temperature, 
     presence, day/night schedule, and open windows/doors. 🌡️🏠
   domain: automation
@@ -76,6 +76,18 @@ blueprint:
       selector:
         entity:
           domain: input_number
+    day_start_time:
+      name: "☀️ Day Start Time"
+      description: "The time to switch to the daytime target temperature."
+      selector:
+        time:
+      default: "08:00:00"
+    day_end_time:
+      name: "🌙 Day End Time"
+      description: "The time to switch to the nighttime target temperature."
+      selector:
+        time:
+      default: "21:00:00"
     hysteresis:
       name: "📊 Hysteresis"
       description: "The buffer around the target temperature to prevent the boiler from cycling too often (0.1-2.0°C)."
@@ -112,6 +124,8 @@ variables:
   target_temp_away: !input target_temp_away
   thermostat_entity: !input thermostat_entity
   manual_off_override_duration: !input manual_off_override_duration
+  day_start_time: !input day_start_time
+  day_end_time: !input day_end_time
 
   # Derive state from entities
   indoor_temp: "{{ states(indoor_temp_sensor) | float(20) }}"
@@ -119,7 +133,7 @@ variables:
   max_outdoor_temp: !input max_outdoor_temp
   too_warm_outside: "{{ outdoor_temp_sensor != '' and outdoor_temp > max_outdoor_temp }}"
   is_home: "{{ expand(presence_entity) | selectattr('state', 'eq', 'home') | list | count > 0 }}"
-  is_day: "{{ now().hour >= 8 and now().hour < 21 }}"
+  is_day: "{{ as_timestamp(now()) >= as_timestamp(day_start_time) and as_timestamp(now()) < as_timestamp(day_end_time) }}"
   window_open: "{{ expand(window_sensor) | selectattr('state', 'eq', 'on') | list | count > 0 }}"
   target_temp: >-
     {% if not is_home %}
