🐛 fix(heating-control): finalize trigger logic and add outdoor_temp_sensor trigger
This commit finalizes the trigger logic by reverting to platform: state for indoor_temp_sensor, presence_entity, and window_sensor (with explicit 'on'/'off' states). It also adds a dedicated state trigger for outdoor_temp_sensor to ensure the automation re-evaluates on changes to outdoor temperature. The is_day template fix from 2.10 is retained. This addresses the UndefinedError and ensures correct trigger behavior for all entity inputs.

--- a/Heating Control/heating_control_blueprint.yaml
+++ b/Heating Control/heating_control_blueprint.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: "🔥 Advanced Heating Control"
   description: >-
-    Version: 2.10
+    Version: 2.11
     A smart thermostat control that considers indoor/outdoor temperature, 
     presence, day/night schedule, and open windows/doors. 🌡️🏠
   domain: automation
@@ -165,9 +165,14 @@ trigger:
   - platform: state
     entity_id: !input indoor_temp_sensor
   - platform: state
+    entity_id: !input outdoor_temp_sensor
+  - platform: state
     entity_id: !input presence_entity
   - platform: state
     entity_id: !input window_sensor
+    to:
+      - "on"
+      - "off"
   - platform: state
     entity_id:
       - !input target_temp_day
