--- a/blueprints/presence_lights/presence_lights.yaml
+++ b/blueprints/presence_lights/presence_lights.yaml
@@ -1,8 +1,8 @@
-# Version: 1.0.4
+# Version: 1.0.5
 blueprint:
   name: "💡 Presence - Home/Away Lights"
   description:
-    "📦 [Version 1.0.4] Turns on specified lights when someone arrives home after sunset, and turns
+    "📦 [Version 1.0.5] Turns on specified lights when someone arrives home after sunset, and turns
     them off when the last person leaves."
   domain: automation
   source_url: https://github.com/r3mco/blueprints/blob/main/blueprints/presence_lights/presence_lights.yaml
@@ -77,7 +77,7 @@ action:
               # If the 'turn_off_all_lights' switch is ON
               - conditions:
                   - condition: template
-                    value_template: "{{ !input turn_off_all_lights }}"
+                    value_template: "{{ turn_off_all_lights }}"
                 sequence:
                   - service: light.turn_off
                     data: {}
