--- a/presence_lights/presence_lights.yaml
+++ b/presence_lights/presence_lights.yaml
@@ -1,8 +1,8 @@
-# Version: 1.0.6
+# Version: 1.0.7
 blueprint:
   name: "💡 Presence - Home/Away Lights"
   description:
-    "📦 [Version 1.0.6] Turns on specified lights when someone arrives home after sunset, and turns
+    "📦 [Version 1.0.7] Turns on specified lights when someone arrives home after sunset, and turns
     them off when the last person leaves."
   domain: automation
   source_url: https://github.com/r3mco/blueprints/blob/main/presence_lights/presence_lights.yaml
@@ -82,7 +82,7 @@ action:
                   - service: light.turn_off
                     data: {}
                     target:
-                      entity_id: "all"
+                      entity_id: all
             # If the 'turn_off_all_lights' switch is OFF (default)
             default:
               - service: light.turn_off
