--- a/presence_lights/presence_lights.yaml
+++ b/presence_lights/presence_lights.yaml
@@ -1,8 +1,8 @@
-# Version: 1.0.12
+# Version: 1.0.13
 blueprint:
   name: "💡 Presence - Home/Away Lights"
   description:
-    "📦 [Version 1.0.12] Turns on specified lights when someone arrives home after sunset, and turns
+    "📦 [Version 1.0.13] Turns on specified lights when someone arrives home after sunset, and turns
     them off when the last person leaves."
   domain: automation
   source_url: https://github.com/r3mcos3/blueprints/blob/main/presence_lights/presence_lights.yaml
@@ -54,6 +54,8 @@ trigger:
     id: away
 
 action:
+  - variables:
+      _turn_off_all_lights: !input turn_off_all_lights
   - choose:
       # Case 1: Arrived Home
       - conditions:
@@ -77,7 +79,7 @@ action:
               # If the 'turn_off_all_lights' switch is ON
               - conditions:
                   - condition: template
-                    value_template: "{{ turn_off_all_lights | bool }}"
+                    value_template: "{{ _turn_off_all_lights | bool }}"
                 sequence:
                   - service: light.turn_off
                     data: {}
