--- a/ai_parking_counter/ai_parking_counter.yaml
+++ b/ai_parking_counter/ai_parking_counter.yaml
@@ -6,6 +6,8 @@ blueprint:
     spaces upon arrival, updating sensors and sending a notification."
   domain: automation
   source_url: https://github.com/r3mcos3/blueprints/blob/main/ai_parking_counter/ai_parking_counter.yaml
+  homeassistant:
+    min_version: 2025.12.0
 
   input:
     person_entity:
