📝 Update Presence Lights documentation and HA version
- Standardize README to comprehensive format with badges
- Add detailed Features, Requirements, and Configuration sections
- Add Automatic Installation button
- Add multiple Usage Examples with practical scenarios
- Expand Troubleshooting with detailed solutions
- Update to Home Assistant 2025.12.0+
- Fix GitHub username to r3mcos3

--- a/presence_lights/presence_lights.yaml
+++ b/presence_lights/presence_lights.yaml
@@ -6,6 +6,8 @@ blueprint:
     them off when the last person leaves."
   domain: automation
   source_url: https://github.com/r3mcos3/blueprints/blob/main/presence_lights/presence_lights.yaml
+  homeassistant:
+    min_version: 2025.12.0
 
   input:
     lights_target:
